--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
    		<title>Guarchi Of Page</title>
-   		<link rel="icon" type="image/jpg" href="imagenes/logo guarchi.jpg">
+   		<link rel="icon" type="image/jpg" href="./imagenes/logo_guarchi.jpg">
    		
    		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Lato:ital,wght@1,300&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 		<header class="header">
 			<div class="container">
 				<figure class="logo">
-					<img src="imagenes/logo warchi.png" height="50px" width="50 px" alt="Imagen logo" width="100" />
+					<img src="./imagenes/logo_warchi.png" height="50px" width="50 px" alt="Imagen logo" width="100" />
 				</figure>
 				<nav class="menu">
 
@@ -40,7 +40,7 @@
 					Hola! Soy <strong>Marc Gómez Velasco </strong><br>Capitan Interino del <br>equipo Profesional <strong>The Papis</strong>
 				</h1>
 			
-				<img class="hero-image" src="imagenes/warchi piola.png" width="500" height="300px">
+				<img class="hero-image" src="./imagenes/warchi piola.png" width="500" height="300px">
 			</div>
 		</section>
 		<section id="portafolio" class="portfolio"><!-- portafolio -->
@@ -57,7 +57,7 @@
 
 
 					<figure class="project-imagecontainer">
-					<img class="project-image" src="imagenes/warchimania.jpg" width="500">
+					<img class="project-image" src="./imagenes/warchimania.jpg" width="500">
 
 					</figure>
 
@@ -74,7 +74,7 @@
 
 
 					<figure class="project-imagecontainer">
-					<img class="project-image" src="imagenes/warchi ferre.jpg" width="500">
+					<img class="project-image" src="./imagenes/warchi ferre.jpg" width="500">
 
 					</figure>
 
@@ -90,7 +90,7 @@
 			
 				<article class="event">
 					<figure class="event-imagecontainer">
-						<img class="event-image" src="imagenes/warchi pelo.jpg">
+						<img class="event-image" src="./imagenes/warchi pelo.jpg">
 					</figure>
 					<div class="event-detail">
 						<h3 class="event-title">Guarchi se calvea en directo</h3>
@@ -102,7 +102,7 @@
 
 				<article class="event">
 					<figure class="event-imagecontainer">
-						<img class="event-image" src="imagenes/warchi lov.jpg">
+						<img class="event-image" src="./imagenes/warchi lov.jpg">
 					</figure>
 					<div class="event-detail">
 						<h3 class="event-title">Guarchi princeso</h3>
@@ -113,7 +113,7 @@
 				</article>
 				<article class="event">
 					<figure class="event-imagecontainer">
-						<img class="event-image" src="imagenes/warchi formal.jpg">
+						<img class="event-image" src="./imagenes/warchi formal.jpg">
 					</figure>
 					<div class="event-detail">
 						<h3 class="event-title">Guarchi seriesito</h3>
@@ -124,7 +124,7 @@
 				</article>	
 				<article class="event">
 					<figure class="event-imagecontainer">
-						<img class="event-image" src="imagenes/warchi joven.jpg">
+						<img class="event-image" src="./imagenes/warchi joven.jpg">
 					</figure>
 					<div class="event-detail">
 						<h3 class="event-title">Guarchi viejucho</h3>
@@ -155,7 +155,7 @@
 		<footer class="footer">
 			<div class="container">
 				<div>
-					<p>Hi-Rez SPL player <img src="imagenes/logo hirez.png" width="80"></p>
+					<p>Hi-Rez SPL player <img src="./imagenes/logo_hirez.png" width="80"></p>
 				</div>
 				<div>
 					<p>Designed by Kevonbom</p>
